<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".controller.SkillActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/background_image"/>

    <ImageView
            android:src="@drawable/swooshlogo"
            android:layout_width="120dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/logo"
            android:scaleType="fitCenter"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/swoosh_logo"/>

    <TextView
            android:text="@string/skill_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/level"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/montserrat"
            android:textSize="18sp"
            android:textColor="@android:color/white"/>

    <Button
            android:text="@string/finish_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/finishButton"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            android:fontFamily="@font/montserrat"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:background="@drawable/swoosh_button"
            android:textStyle="bold" android:onClick="onFinishButtonClick"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/level"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp">

        <ToggleButton
                android:text="@string/beginner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/beginnerButton"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:fontFamily="@font/montserrat"
                android:background="@drawable/swoosh_toggle"
                android:textOff="@string/beginner"
                android:textOn="@string/beginner"
                android:textAllCaps="false" android:onClick="onBeginnerButtonClick"/>

        <ToggleButton
                android:text="@string/baller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ballerButton"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:fontFamily="@font/montserrat"
                android:background="@drawable/swoosh_toggle"
                android:textOff="@string/baller"
                android:textOn="@string/baller"
                android:textAllCaps="false" android:onClick="onBallerButtonClick"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>